<resources>
    <string name="app_name">Way to Cludgie</string>
    <string name="title_activity_markers">Way to Cludgie</string>
    <string name="borough_formated" translatable="false">%1$s ème</string>
    <string name="street_number_label">Street number</string>
    <string name="street_name_label">Street name</string>
    <string name="borough_label">Borough</string>
    <string name="opening_hours_label">Opening hours</string>
    <string name="administrator_label">Administrator</string>
    <string name="source_label">Source</string>
    <string name="directions">Directions</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share">Share</string>
    <string name="all_the_time">All the time</string>
    <string name="opening_hours_format" translatable="false">%1$s h - %2$s h</string>
    <string name="web_error">An error occurred! Please, check your internet connection.</string>
    <string name="meters_formatted" translatable="false">~ %1$.0f m</string>
    <string name="kilometers_formatted" translatable="false">~ %1$.1f km</string>
    <string name="sanisette_opened">Opened</string>
    <string name="sanisette_closed">Closed</string>
    <string name="detail_title">Sanisette detail</string>
    <string name="wc_list">Sanisettes list</string>
    <string name="filters">Filters</string>
    <string name="favorites">Favorites</string>
    <string name="loading_message">Checking if new Sanisette have appeared …</string>
    <string name="share_message">If you ever need to %1$s, you could go there : %2$s</string>
    <string name="send_to">Send to</string>
</resources>
