<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shrinkColumns="1">

            <TableRow style="@style/TableRow">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TableLabel"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/street_number_label" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvStreetNumber"
                    style="@style/TableData"
                    tools:text="face 154" />
            </TableRow>

            <TableRow style="@style/TableRow">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TableLabel"
                    android:text="@string/street_name_label" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvStreetName"
                    style="@style/TableData"
                    tools:text="Rue Ordener" />
            </TableRow>

            <TableRow style="@style/TableRow">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TableLabel"
                    android:text="@string/borough_label" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvBorough"
                    style="@style/TableData"
                    tools:text="18 ème" />
            </TableRow>

            <TableRow style="@style/TableRow">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TableLabel"
                    android:text="@string/opening_hours_label" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvOpeningHours"
                    style="@style/TableData"
                    tools:text="6 h - 22 h" />
            </TableRow>

            <TableRow style="@style/TableRow">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TableLabel"
                    android:layout_gravity="center_vertical"
                    android:text="@string/administrator_label" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvAdministrator"
                    style="@style/TableData"
                    tools:text="Toilette publique de la Ville de Paris" />
            </TableRow>

            <TableRow style="@style/TableRow">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TableLabel"
                    android:layout_gravity="center_vertical"
                    android:text="@string/source_label" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvSource"
                    style="@style/TableData"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textColorLink="@color/links"
                    tools:text="http://opendata.paris.fr" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/toilet_opened_arrow" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvOpened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Opened" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                app:srcCompat="@drawable/ic_toggle_favorite"
                tools:text="250 m" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="5dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btDirections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_directions_24dp"
            android:text="@string/directions"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/btFavorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_toggle_favorite"
            android:textColor="@color/colorAccent"
            android:textOff="@string/add_to_favorites"
            android:textOn="@string/remove_from_favorites"
            android:textSize="10sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_share_24dp"
            android:text="@string/share"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>